d3d11_unit_sources = files(
  'device_spec.cpp',
  'capability_spec.cpp',
  'device_feature_contract_spec.cpp',
  'device_capability_validation_contract_spec.cpp',
  'multisample_quality_levels1_matrix_spec.cpp',
  'pipeline_spec.cpp',
  'buffer_desc_matrix_spec.cpp',
  'constant_buffer_range_binding_matrix_spec.cpp',
  'input_assembler_ops_spec.cpp',
  'input_layout_binding_matrix_spec.cpp',
  'primitive_topology_state_matrix_spec.cpp',
  'vertex_buffer_binding_matrix_spec.cpp',
  'index_buffer_binding_matrix_spec.cpp',
  'resource_spec.cpp',
  'texture1d_desc_matrix_spec.cpp',
  'texture2d_desc_matrix_spec.cpp',
  'texture3d_desc_matrix_spec.cpp',
  'versioned_texture_creation_contract_spec.cpp',
  'versioned_texture2d_view_desc_matrix_spec.cpp',
  'video_interface_contract_spec.cpp',
  'resource_eviction_priority_matrix_spec.cpp',
  'resource_min_lod_matrix_spec.cpp',
  'draw_matrix_spec.cpp',
  'indirect_draw_matrix_spec.cpp',
  'indirect_indexed_draw_matrix_spec.cpp',
  'transfer_matrix_spec.cpp',
  'update_subresource1_matrix_spec.cpp',
  'copy_subresource_region1_matrix_spec.cpp',
  'batched_buffer_copy_spec.cpp',
  'query_matrix_spec.cpp',
  'predication_binding_matrix_spec.cpp',
  'query_contract_spec.cpp',
  'query1_desc_matrix_spec.cpp',
  'depth_stencil_matrix_spec.cpp',
  'depth_stencil_state_binding_matrix_spec.cpp',
  'depth_stencil_state_desc_matrix_spec.cpp',
  'view_matrix_spec.cpp',
  'texture_view_format_contract_spec.cpp',
  'shader_resource_view_desc_matrix_spec.cpp',
  'buffer_shader_resource_view_desc_matrix_spec.cpp',
  'texture_cube_array_shader_resource_view_desc_matrix_spec.cpp',
  'texture_cube_shader_resource_view_desc_matrix_spec.cpp',
  'texture1d_shader_resource_view_desc_matrix_spec.cpp',
  'texture1d_single_shader_resource_view_desc_matrix_spec.cpp',
  'texture2d_single_shader_resource_view_desc_matrix_spec.cpp',
  'texture2dms_single_shader_resource_view_desc_matrix_spec.cpp',
  'texture2dms_shader_resource_view_desc_matrix_spec.cpp',
  'texture3d_shader_resource_view_desc_matrix_spec.cpp',
  'unordered_access_view_desc_matrix_spec.cpp',
  'buffer_unordered_access_view_desc_matrix_spec.cpp',
  'texture1d_unordered_access_view_desc_matrix_spec.cpp',
  'texture1d_single_unordered_access_view_desc_matrix_spec.cpp',
  'texture2d_single_unordered_access_view_desc_matrix_spec.cpp',
  'texture3d_unordered_access_view_desc_matrix_spec.cpp',
  'render_target_view_desc_matrix_spec.cpp',
  'buffer_render_target_view_desc_matrix_spec.cpp',
  'texture1d_render_target_view_desc_matrix_spec.cpp',
  'texture1d_single_render_target_view_desc_matrix_spec.cpp',
  'texture2d_single_render_target_view_desc_matrix_spec.cpp',
  'texture2dms_single_render_target_view_desc_matrix_spec.cpp',
  'texture2dms_render_target_view_desc_matrix_spec.cpp',
  'texture3d_render_target_view_desc_matrix_spec.cpp',
  'depth_stencil_view_desc_matrix_spec.cpp',
  'texture1d_depth_stencil_view_desc_matrix_spec.cpp',
  'texture1d_single_depth_stencil_view_desc_matrix_spec.cpp',
  'texture2d_single_depth_stencil_view_desc_matrix_spec.cpp',
  'texture2dms_single_depth_stencil_view_desc_matrix_spec.cpp',
  'texture2dms_depth_stencil_view_desc_matrix_spec.cpp',
  'object_com_matrix_spec.cpp',
  'device_child_object_contract_spec.cpp',
  'class_linkage_contract_spec.cpp',
  'sampler_state_desc_matrix_spec.cpp',
  'output_merger_binding_matrix_spec.cpp',
  'blend_state_binding_matrix_spec.cpp',
  'blend_state_desc_matrix_spec.cpp',
  'blend_state1_desc_matrix_spec.cpp',
  'rasterizer_state_binding_matrix_spec.cpp',
  'rasterizer_state_desc_matrix_spec.cpp',
  'rasterizer_state1_desc_matrix_spec.cpp',
  'rasterizer_state2_desc_matrix_spec.cpp',
  'clear_state_subset_matrix_spec.cpp',
  'clear_blend_matrix_spec.cpp',
  'clear_view_rect_matrix_spec.cpp',
  'clear_uav_float_matrix_spec.cpp',
  'viewport_state_matrix_spec.cpp',
  'shader_constant_buffer_binding_matrix_spec.cpp',
  'shader_object_binding_matrix_spec.cpp',
  'shader_resource_binding_matrix_spec.cpp',
  'shader_sampler_binding_matrix_spec.cpp',
  'viewport_sampler_matrix_spec.cpp',
  'scissor_rect_state_matrix_spec.cpp',
  'viewport_scissor_ops_spec.cpp',
  'rasterization_ops_spec.cpp',
  'interpolation_ops_spec.cpp',
  'mrt_ops_spec.cpp',
  'compute_uav_binding_matrix_spec.cpp',
  'dispatch_matrix_spec.cpp',
  'indirect_dispatch_matrix_spec.cpp',
  'msaa_execution_ops_spec.cpp',
  'msaa_resolve_matrix_spec.cpp',
  'deferred_context_creation_contract_spec.cpp',
  'immediate_context_version_contract_spec.cpp',
  'context_object_contract_spec.cpp',
  'command_list_contract_spec.cpp',
  'annotation_contract_spec.cpp',
  'multithread_contract_spec.cpp',
  'device_context_state_contract_spec.cpp',
  'fence_contract_spec.cpp',
  'device_removed_event_contract_spec.cpp',
  'counter_contract_spec.cpp',
  'device_exception_mode_contract_spec.cpp',
  'dxgi_device_residency_contract_spec.cpp',
  'dxgi_device_object_contract_spec.cpp',
  'dxgi_adapter_factory_object_contract_spec.cpp',
  'dxgi_resource_usage_contract_spec.cpp',
  'dxgi_resource_object_contract_spec.cpp',
  'dxgi_resource_offer_contract_spec.cpp',
  'dxgi_device_scheduling_contract_spec.cpp',
  'fence_synchronization_contract_spec.cpp',
  'counter_execution_contract_spec.cpp',
  'deferred_context_matrix_spec.cpp',
  'format_mip_matrix_spec.cpp',
  'map_copy_matrix_spec.cpp',
  'shader_arithmetic_matrix_spec.cpp',
  'shader_conversion_matrix_spec.cpp',
  'shader_derivative_ops_spec.cpp',
  'geometry_shader_ops_spec.cpp',
  'stream_output_binding_matrix_spec.cpp',
  'stream_output_matrix_spec.cpp',
  'tessellation_shader_ops_spec.cpp',
  'raw_buffer_shader_matrix_spec.cpp',
  'raw_uav_atomic_spec.cpp',
  'shader_atomic_matrix_spec.cpp',
  'texture_dimension_matrix_spec.cpp',
  'texture_sampling_ops_spec.cpp',
  'uav_counter_shader_spec.cpp',
)
d3d11_unit_dependencies = [d3d11_test_dep, dxgi_test_dep, d3dcompiler_test_dep]
